Added more movies and fixed database to work in Cloudfoundry by using the jdbc:initialize-database.
Also fixed bug on Many-to-many mapping (was the wrong way round!)

Added text to index.html page.

--- a/AppDevFrameworkProject/src/main/webapp/index.html
+++ b/AppDevFrameworkProject/src/main/webapp/index.html
@@ -14,10 +14,19 @@
 <body>
 <div id="main_wrapper">
 
-<h1>>MSc Cloud Computing [App. Development Frameworks] Project - Eugene Bell</h1>
+<h1>MSc Cloud Computing [App. Development Frameworks] Project - Eugene Bell</h1>
 
 <p><a href="movies/movieListing.htm">To Begin Click Here!</a></p>
-<p>This is where we put the info !!!!!!!!!!!!</p>
+<p>Initially there is only the admin user. When you log in to admin you well see 2 menu options.
+The first one allows you to create normal users i.e. ROLE_USER. These users can login through the same login
+and are directed to the user space. The admin users can also view the list of users and select there name to see what movies
+they have reserved and can set them to have been rented which will charge there account at the price 
+as per movie metadata (There is no way for the user to reset their total in this demo). The admin user can also delete the users.
+</p>
+<p>As a normal user when you log in you are shown a menu that has 11 Movie Genres. The user can select the 
+movie link (the Title of the movie) to see the Movie details and select the reserve button to reserve this movie 
+(user can also undo reservation).
+</p>
 </div>
 </body>
 
